--- a/edge-of-the-world.html
+++ b/edge-of-the-world.html
@@ -457,7 +457,7 @@ top of the pole is vibrating back and forth. With a slight upward push of his ha
 Within a year, the cooling technology we were developing took a profitable turn and became the very popular curb-side cooler business you know of today as "PopBox".  Designed so the lids were flush with ground level, the solar panel on the lid allowed the box to also heat a meal as residents returned home.
 </p>
 
-<p>Continue: <a href="./spring/finibus-tour" target="finibus">Finibus Tour</a></p>
+<p>Continue: <a href="./the-artisan/" target="finibus">The Artisan</a></p>
 
 
 </div><!-- /audioscape -->
