--- a/gathering-cats/unwinding/index.html
+++ b/gathering-cats/unwinding/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="Content-Type" content="text/html;">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Tar and Steel - To each their own - Audioscape</title>
+<title>Tar and Steel - Unwinding in Wonder - Audioscape</title>
 <!--link rel="shortcut icon" href="../img/icons/" /-->
 <style type='text/css'>
 	.clear { border-top: solid 1px #ccc;}
@@ -78,13 +78,13 @@
         <!--
         <img src="img/logo/projectmuse-text.png" style="width:100%;max-width:250px; margin-left:20px" />
         -->
-        <div class="bookTitle">
+        <div class="mainTitle">
         tar and steel
         </div>
     </div>
 
     <div class="chapterTitle fade-in">
-        To each their own
+        Unwinding in Wonder
         <!--
         <div class="chapterSubtitle fade-in">unwinding wonder valley</div>
     	-->
@@ -99,9 +99,8 @@
 <a href="#go"><img class="fixedBkgdX backgroundAbsoluteX" src="../../spring/finibus-tour/img/finibus-road-crop.jpg" style="width:100%; z-index:0" alt="" /></a>
 
 
-
+<a name="go"></a>
 <div id="floatContent" class="container floatContainerX" style="margin-top:100px">
-	<a name="go"></a>
 
 	<div class="content">
 
@@ -113,7 +112,7 @@
 
 		<a href="../../" class="returnhome">Tar and Steel</a>
 
-		<h1>To each their own</h1>
+		<h1>Unwinding in Wonder<!--To each their own--></h1>
 
 		<div style="clear:both"></div>
 
@@ -177,9 +176,7 @@
 
 	<p>It was another busy night.  With the last customer gone, Nipsy was up on the counter. Her paw jerked back and forth as she tried desperately to unsnarl a ball of yarn caught in her claws. The tips were good, so I didn't mind the late hours, at least until the winter is over back home.  Then I'll need to get myself organized, and turn over a new leaf.<br>
 	...</p>
-	<p>Several weeks had gone by and the busy season was drawing to a close. I was tying up loose ends online and decided to click on an ad I'd seen several times over the last few days.</p>
-	<p>The ad said, "Travel School Instructor Wanted - Remote locations, ample rewards"</p>
-
+	<p>Several weeks had gone by and the busy season was winding down. I was tying up loose ends online and decided to click on an ad I'd seen several times over the last few days: "Travel School Instructor Wanted - Remote locations, ample rewards"</p>
 </div>
 
 <!--
@@ -191,6 +188,8 @@
 
 <div style="clear:both"></div>
 <br>
+
+<a href="../../spring/finibus-tour/">Finibus Tour</a><br>
 
 
 <br><a href="../../">&copy; 2021 Audioscape</a><br><br>
