--- a/the-artisan/index.html
+++ b/the-artisan/index.html
@@ -44,7 +44,7 @@
     param.headerLogoX = "<img src='img/logo/[].png' style='width:28px'>";
       param.headerFileX = "../../header.html"
       param.footer = "../../footer.html"
-      $(window).scroll(function(){$(".herocenter").css("opacity", 1 - $(window).scrollTop() / 200);});
+      $(window).scroll(function(){let toZero = 1-$(window).scrollTop()/200; $(".herocenter").css("opacity", toZero); if (toZero <= 0) {$(".herocenter").hide()} else {$(".herocenter").show();}});
   </script>
 
 
