--- a/gathering-cats/border-crossing/index.html
+++ b/gathering-cats/border-crossing/index.html
@@ -87,9 +87,11 @@
 
 <img class="fixedBkgdX" src="../../summer/img/pickup-crop.jpg" style="opacity:0.6;width:100%;max-width:2000px" alt="" />
 
+<a name="location"></a>
+
 <div id="menuHolder" class="menuHolderShort"></div>
 <div class="containerXXX">
-<div id="location" class="content">
+<div class="content">
 
 
 <a href="../../" class="returnhome">Audioscape</a>
