--- a/spring/twist/index.html
+++ b/spring/twist/index.html
@@ -1,35 +1,101 @@
+<!DOCTYPE>
+
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="Content-Type" content="text/html;">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Tar and Steel - Twist - Audioscape</title>
+<!--link rel="shortcut icon" href="../img/icons/" /-->
+<style type='text/css'>
+	.clear { border-top: solid 1px #ccc;}
+</style>
+
+
 <meta name="robots" content="noindex,nofollow" />
 
-This is a strange story I guess.  
-  
-About 25 years ago I was in a clinic undergoing treatment when one of the counselors there took an interest in me.  There were three actually that would make arrangements for me to go on passes with them.  
-  
-But one had the best offer.  She said to get a pass for next weekend because she had tickets to see Wilco and she would drive and pay for everything.  
-  
-That night it was really crowded and I said to her, “if you would like to put your arms around me to get more room, it’s OK.”  We spent the next month going to concerts until we got caught by someone and she got fired.   
-I was released and she moved in with me.  She was a sweetheart; beautiful and nice and willing to do anything for me.  
-  
-After a year, she said, “I want you to marry me.”  I explained that I didn’t know anything about that stuff.  
-  
-A few days later she said that she had found a ring for 340 bucks, so I said OK lets get married.  
-  
-A few months later, my parents said that they had the marriage set up and it was a go.  
-  
-I invited all of my friends and it was a great time.  
-  
-Here is the twist.  
+<link type="text/css" rel="stylesheet" href="https://neighborhood.org/localsite/css/base.css" />
+<script type="text/javascript" src="https://neighborhood.org/localsite/js/d3.v5.min.js"></script>
+<script type="text/javascript" src="https://neighborhood.org/localsite/js/jquery.min.js"></script>
+<script type="text/javascript" src="https://neighborhood.org/localsite/js/localsite.js"></script>
+<script type="text/javascript" src="https://neighborhood.org/localsite/js/showdown.min.js"></script>
+<script type="text/javascript" src="https://neighborhood.org/localsite/js/navigation.js"></script>
+<!--
+<link type="text/css" rel="stylesheet" href="https://neighborhood.org/localsite/css/bootstrap.darkly.min.css">
+-->
+<script type="text/javascript" src="/audioscape/js/common/common.js"></script>
+<link type="text/css" rel="stylesheet" href="../../css/all.css">
 
-My mother approached me and said that my wife did not know how to read or write.  
-  
-I said that makes sense because when I ask her to write a grocery list, I can’t make out a word.  Some background information; my new bride was born to a stripper who was 16 years old.  Her father was in San Quentin serving 20 years.  Unfortunately, he called from the prison and tried to extort money from my parents.  He got out years later and was killed violently very soon.  He was thrown from a moving car into the street after an OD.  
-  
-So, she had it rough. I didn’t know this stuff. All I knew was that she was nice to me, wanted to have kids, and she was very dedicated to me, and I had been the reason she got fired.  
+<script>
+    param.titleArray = ["audio","scape"]
+    param.headerLogo = "🎧 "; // headphones
+    param.startTitle = "AudioScape"
+	param.headerLogoX = "<img src='img/logo/[].png' style='width:28px'>";
+    param.headerFileX = "../../header.html"
+    param.footer = "../../footer.html"
+    $(window).scroll(function(){let toZero = 1-$(window).scrollTop()/200; $(".herocenter").css("opacity", toZero); if (toZero <= 0) {$(".herocenter").hide()} else {$(".herocenter").show();}});
+</script>
+<style>
+	.showMenu {
+		display:none;
+	}
+	#footer {
+		display:none;
+	}
+	.floatContainer {
+		position: absolute;
+		margin-top: 780px;
 
-I asked my mother what are we going to do?  My mother said that she would live with us from Monday to Friday and while I was at work, she would teach her to read and write, but you have to act like  you don’t know. She knows your intellect and she would be destroyed if she knew that you had an idea.  
-  
-So for two years, my mother taught her to read and write. Eventually, she applied to UCLA Women’s studies and with the help of special education resources graduated from UCLA.   
-She is now the manager of a funeral home and does pretty well for herself.  
-  
-Unfortunately, business is good these days (due to Covid).  
-  
-During better times, she also does speaking engagements where she tells this story.
+		margin-left: auto;
+		margin-right: auto;
+		left: 0;
+		right: 0;
+		text-alignX: center;
+		background-color: rgba(35, 35, 35, .68);
+	}
+	.content {
+		margin:0 auto;
+	}
+	.backgroundAbsolute {
+		positionX: absolute;
+		topX: -1500px;
+	}
+</style>
+
+</head>
+
+<body>
+
+
+<a name="go"></a>
+<div class="container floatContainerX" style="margin-top:100px">
+
+	<div class="content">
+
+		<!--
+		<div style="float:right">
+		  <link type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+		  <script type="text/javascript" src="../../js/audio.js"></script>
+		  <div id="audioscape-output-control"></div>
+		</div>
+		-->
+		
+		<a href="../../" class="returnhome">audioscape</a>
+
+		<h1>Twist</h1>
+
+		<div id="readmeDiv" class="audioscape"></div>
+		<script>
+		    loadMarkdown("README.md", "readmeDiv", "_parent");
+		</script>
+
+		<div style="clear:both"></div>
+
+
+		<br><a href="../../">&copy; 2021 Audioscape</a><br><br>
+
+	</div>
+</div>
+ 
+</body>
+</html>
