--- a/gathering-cats/unwinding/index.html
+++ b/gathering-cats/unwinding/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="Content-Type" content="text/html;">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Tar and Steel - Unwinding in Wonder - Audioscape</title>
+<title>Tar and Steel - Unwinding Wonder Valley - Audioscape</title>
 <!--link rel="shortcut icon" href="../img/icons/" /-->
 <style type='text/css'>
 	.clear { border-top: solid 1px #ccc;}
@@ -84,7 +84,7 @@
     </div>
 
     <div class="chapterTitle fade-in">
-        Unwinding in Wonder
+        Unwinding Wonder Valley
         <!--
         <div class="chapterSubtitle fade-in">unwinding wonder valley</div>
     	-->
@@ -112,7 +112,7 @@
 
 		<a href="../../" class="returnhome">Tar and Steel</a>
 
-		<h1>Unwinding in Wonder<!--To each their own--></h1>
+		<h1>Unwinding Wonder Valley<!--To each their own--></h1>
 
 		<div style="clear:both"></div>
 
