--- a/gathering-cats/unwinding/index.html
+++ b/gathering-cats/unwinding/index.html
@@ -107,6 +107,11 @@
 		<div style="float:right">
 		  <link type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 		  <script type="text/javascript" src="../../js/audio.js"></script>
+		  <script>
+		  	$(document).ready(function () {
+		  		initAudio("Fiona", 0.85);
+		  	});
+		  </script>
 		  <div id="audioscape-output-control"></div>
 		</div>
 
