--- a/spring/twist/index.html
+++ b/spring/twist/index.html
@@ -14,14 +14,14 @@
 
 <meta name="robots" content="noindex,nofollow" />
 
-<link type="text/css" rel="stylesheet" href="https://neighborhood.org/localsite/css/base.css" />
-<script type="text/javascript" src="https://neighborhood.org/localsite/js/d3.v5.min.js"></script>
-<script type="text/javascript" src="https://neighborhood.org/localsite/js/jquery.min.js"></script>
-<script type="text/javascript" src="https://neighborhood.org/localsite/js/localsite.js"></script>
-<script type="text/javascript" src="https://neighborhood.org/localsite/js/showdown.min.js"></script>
-<script type="text/javascript" src="https://neighborhood.org/localsite/js/navigation.js"></script>
+<link type="text/css" rel="stylesheet" href="../../../localsite/css/base.css" />
+<script type="text/javascript" src="../../../localsite/js/d3.v5.min.js"></script>
+<script type="text/javascript" src="../../../localsite/js/jquery.min.js"></script>
+<script type="text/javascript" src="../../../localsite/js/localsite.js"></script>
+<script type="text/javascript" src="../../../localsite/js/showdown.min.js"></script>
+<script type="text/javascript" src="../../../localsite/js/navigation.js"></script>
 <!--
-<link type="text/css" rel="stylesheet" href="https://neighborhood.org/localsite/css/bootstrap.darkly.min.css">
+<link type="text/css" rel="stylesheet" href="../../../localsite/css/bootstrap.darkly.min.css">
 -->
 <script type="text/javascript" src="/audioscape/js/common/common.js"></script>
 <link type="text/css" rel="stylesheet" href="../../css/all.css">
@@ -72,21 +72,23 @@
 
 	<div class="content">
 
-		<!--
+		
 		<div style="float:right">
 		  <link type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 		  <script type="text/javascript" src="../../js/audio.js"></script>
 		  <div id="audioscape-output-control"></div>
 		</div>
-		-->
 		
+
 		<a href="../../" class="returnhome">audioscape</a>
 
 		<h1>Twist</h1>
 
 		<div id="readmeDiv" class="audioscape"></div>
 		<script>
-		    loadMarkdown("README.md", "readmeDiv", "_parent");
+		    loadMarkdown("README.md", "readmeDiv", "_parent", function(results){
+		    	initAudio("Alex", 0.95);
+		    });
 		</script>
 
 		<div style="clear:both"></div>
