--- a/city.html
+++ b/city.html
@@ -23,6 +23,9 @@
     //param.headerLogo = "🎧 "; // headphones
     param.headerFileX = "https://neighborhood.org/localsite/header.html"
     param.footer = "https://neighborhood.org/localsite/footer.html"
+    $(document).ready(function () {
+        initAudio("Fiona", 0.85);
+    });
 </script>
 
 <style>
