--- a/edge-of-the-world.html
+++ b/edge-of-the-world.html
@@ -51,6 +51,9 @@
     param.headerLogo = "🎧 "; // headphones
     param.startTitle = "AudioScape"
     param.footer = "footer.html"
+    $(document).ready(function () {
+        initAudio("Fiona", 0.85);
+    });
 </script>
 <style>
   #logoholder { font-size: 32px; }
