--- a/play/index.html
+++ b/play/index.html
@@ -142,6 +142,9 @@ Show popup with errors details on glenwoodpark.comShow error notification icon o
     
     <script type="text/javascript">
         $(document).ready(function () {
+
+            initAudio("Fiona", 0.85);
+
             fbToken = '117370968285365|5XkqBE8fUp29ZaTRAMTmAAfCFvk'; // Access token from Neighborhood App.
             //showComments = false;
             fbLimit = 20;
