--- a/gathering-cats/aurora/index.html
+++ b/gathering-cats/aurora/index.html
@@ -104,10 +104,20 @@
 
 	<div class="content">
 
-		
+		<div style="float:right">
+		  <link type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+		  <script type="text/javascript" src="../../js/audio.js"></script>
+		  <script>
+		  	$(document).ready(function () {
+		  		initAudio("Alex", 1.2);
+		  	});
+		  </script>
+		  <div id="audioscape-output-control"></div>
+		</div>
 
 		<a href="../../" class="returnhome">Tar and Steel</a>
 
+		<h1>Summer Ends - 1987<!--To each their own--></h1>
 
 		<div style="clear:both"></div>
 
@@ -136,72 +146,38 @@
 
 -->
 
-
-
-	
-	<h1>Unwinding Wonder Valley</h1>
-	
-	<p>
-		March 2021: I talked to my old roommate Patrick Rosenthal this evening. We took a screenwriting class at UCSB years ago, shortly after returning from a marathon roadtrip from California to New York and Massachusetts. More recently he'd been writing a story called Wonder Valley. It doesn't feel like he'll be taking it to completion. It fills notebooks and he hasn't working on it for a couple years. Before hearing it was in notebooks, I felt the following could act as a bridge between our writing. Perhaps I can work with him to introduce two of his characters, The Detective and Jumbo. He's a master of gritty noir, something I'm lacking.
-	</p>
-
-	<h3>Aurora Adrift - 1995</h3>
-
-	<div style="float:right">
-		  <link type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-		  <script type="text/javascript" src="../../js/audio.js"></script>
-		  <script>
-		  	$(document).ready(function () {
-		  		initAudio("Fiona", 0.85);
-		  	});
-		  </script>
-		  <div id="audioscape-output-control"></div>
-	</div>
-
-	<p>"There can be no pleasure like the one unknown." - Aurora S., that's me.</p>
+<h3>Matt and Aurora</h3>
 
 <div class="audioscape">
+<p>
+	One of the sad and confusing moments I had to face as a student preparing for my sophomore year, was the call I received from Aurora, whom I'd been dating at the end of my freshman year.  We'd both gone north for the summer, she to Sutton Valley to her parent's house and me to Coloma, Michigan to visit my Dad and Stepmum. Returning to my mom's in Upland, California, I'd be back in Santa Barbara in a couple weeks when my lease started at the Newman housing co-op on the edge of campus.
+</p>
+<p>
+	I picked up the phone to hear a tearful Aurora.  "Mike told me you were planning to break up. I got drunk. Stanly had sex with me. I don't know what to do."  What a flood of emotions, being mad at Mike, pissed at Stanly, but mostly this tremendous need to console Aurora. What a fucked start for the new school year.
+</p>
+<p>
+	We talked a little more and I put down the phone, stunned and unsure what to do. It felt like Aurora wanted me to make the drive to Santa Barabara, but I didn't have a car of my own, nor did it seem like a good idea if the relationship was winding down. We were also both scared. HIV/AIDS was in it's heyday, Stanly was likely also having sex with men and the whole fact the my freshmen roommate Mike had relayed what I'd told him in confidence made me reel. 
+</p>
+<p>
+	The next couple weeks passed in crapsville limbo. I arrived at the co-op for the start of Sophomore year, my bike and others left there over the summer had been sold by the co-op director to make way for painting in the common porch area. Aurora had dinner at my place as friends. To say the least, the year started with a tone of melancholia.
+</p>
+<p>
+	I changed her name to Aurora above, but the rest is true. Our paths didn't cross much that year, I think she may have ended up moving back to Sutton Creek before the end of the school year.  It was good to see her a couple years later. She'd had a really positive relationship living with a guy for over a year. Now she was returning to Santa Barbara. I had a car by then and she asked if I'd help her pick up a mattress.
+</p>
+<p>
+	I was dating Meilani at the time, so I invited her to join us and we visted common friends Alan and Sabina in downtown Santa Barbara during the outing. Sitting on their beds eating grapes that Alan brought us was a moment of bliss, then I started to feel ill from some bad sour cream on the chille I'd eaten before we arrived at Alan's.  Outside, I was throwing up and ended up in bed with stomach pains. I loved that Meilani stayed by my side when I was ill. I felt like we had something really special. We did.
+</p>
+<p>
+	Part of the reason I'm retelling this is because it later became a short film created by Meilani and Justin for a film class. The story of a guy driving around with his ex-girlfriend and new girlfriend. Our friend Bob played me as sort of a 70's high roller, and in some ways I deserved it, but that has more to do with the end of my relationship with Meilani shortly before the film was made. More on that later.
+</p>
 
-	<p>As I drove the road home from another crazy-busy Friday night of lugging cheap beer across sticky floors. My whole body was worn out and I was looking forward to curling up with a good book to lull my mind to sleep. Steven arrived home shortly after I did.  He parked his jeep in the back. Hugging him at the door, I reached around to grab a bite from the big bag of cinnamon bread from the deli next door, he'd traded two dozen thick slices and they'd thrown in a big jar of fig jam for tomorrow's breakfast.</p>
-
-	<p>Steve and I had been dating off and on for most of the previous five years.  He was both a mentor, an employer and a security blanket.  He'd taken over the pizzeria shortly after his dad died, rescuing it from oblivion, while I rescued him from the loss of his father. We were good for eachother, but not bound at the hip.</p>
-
-	<p>There's one book I've been looking forward to every night this week, <a href="../../the-artisan/">The Artisan</a>. Funny thing though, I usually fall asleep after only a few pages.</p>
-
-	<p>I flip to where I left off.</p>
-
-	<p>Before long I'm yawning, I'm already drifting. But that's why I came here, for the dreams that soon follow.</p>
-
-
-	<hr>
-	<br>
-
-	<p><a href="/audioscape/img/items/bookmarks/bookmark-crop.jpg"><img src="/audioscape/img/items/bookmarks/bookmark-crop.jpg" style="width:100%;max-width:120px;float:right;margin-left:30px" alt="" /></a></p>
-
-
-	<p>I arrived at work the next day around noon, grabbed my old black sneakers from the cubby and started cleaning up from the night before. A drawing fell out of a paper bag holding a screenplay my friend Jen gave me two days prior. The black lines on it formed a cool pattern. I slid it into my back pocket, moving quickly to get to work.</p>
-
-	<p>It was another busy night.  With the last customer gone, Nipsy was up on the counter. Her paw jerked back and forth as she tried desperately to unsnarl a ball of yarn caught in her claws. The tips were good, so I didn't mind the late hours, at least until the winter is over back home.  Then I'll need to get myself organized, and turn over a new leaf.<br>
-	...</p>
-	<p>Several weeks had gone by and the busy season was winding down. I was tying up loose ends online and decided to click on an ad I'd seen several times over the last few days: "Travel School Instructor Wanted - Remote locations, ample rewards"</p>
 </div>
 
-<hr>
-<p>
-	Sometimes when we write things down, it's a way to let them go. Other times it's a way to build a universe that grows and grows until the writer is living in a space fabricated from the loose pieces they've woven together from their life.
-</p>
-
-<!--
-<p>
-	
-	<p><a href="http://homebars.barinacraft.com/post/1161885156/cocktails-liquor-wine-thru-microscope">Under the microscope - cocktails</a></p>
-</p>
--->
 
 <div style="clear:both"></div>
 <br>
 
-Continue: <a href="../aurora/">Summer Ends</a><br>
+<a href="../../spring/finibus-tour/">Finibus Tour</a><br>
 
 
 <br><a href="../../">&copy; 2021 Audioscape</a><br><br>
