--- a/gathering-cats/border-crossing/index.html
+++ b/gathering-cats/border-crossing/index.html
@@ -95,7 +95,7 @@
 
 
 <a href="../../" class="returnhome">Audioscape</a>
-<h1>Border Crossing</h1><!-- Acts of Nature -->
+<h1>Border Crossing - 2012</h1><!-- Acts of Nature -->
 
 <p>Michael crouched close to the wall of the old gas station and pressed the pay-phone to his ear.  Listening intently to his every word, his two children were curled up in bed a thousand miles away. Here, a few miles from the Lebanese border, he picked up on the story of Moki and Coda. He had been telling it to the kids when they were last together. Now he viualized the forest trees to distract himself from the perils of the road ahead.</p>
 
