--- a/spring/finibus-tour/index.html
+++ b/spring/finibus-tour/index.html
@@ -137,7 +137,7 @@
 
 
 
-<h1>Finibus Tour</h1>
+<h1>Finibus Tour - 1990</h1>
 
 <p>To understand the roots of this story, you'd have to track down my classical guitar playing roommate. Toby used to play his guitar upright, like a lute. 
 
