--- a/the-artisan/index.html
+++ b/the-artisan/index.html
@@ -114,7 +114,7 @@ Breeze Seals &amp; Crofts 1972</a></p>
 -->
 
 <a href="../" class="returnhome">Audioscape</a>
-<h1>The Artisan</h1>
+<h1>The Artisan - 1975</h1>
 
 <!--
 <h3>Etch a memory, on anything</h3>
