--- a/edge-of-the-world.html
+++ b/edge-of-the-world.html
@@ -263,7 +263,7 @@ section {
 </style>
 -->
 
-<h1>Edge of the World</h1>
+<h1>Edge of the World - 2032</h1>
 
 <!--
 <h2>Expedition Journal: The Energy of Waves (Finding Neutrino)</h2>
@@ -284,7 +284,7 @@ Luci gained control again and flicked her stick with a swooping gesture toward t
 <p>
 Moog moved swiftly and looked especially tall and slender in the red, yellow and green arctic snow suit. Years of playing hackysack on Caribbean beaches made him quick and nibble, even for his late 40s. Surrounded with a circle of five kids, dreadlocks tied in the back, arms folded across his chest, he stepped swiftly through the flurry of feet to recover control of the puck by raising his hands with a sudden burst on either side of it. It came to a halt within the football goal of his extended arms. Moog gave it a slight mental tap forward to Luci who responded with a full body air punch which sent it cantering toward Jen, wide open across the ice field near the entrance road to IceCube. She gave a final small mental nudge and a flick of the wrist to win the game, and we all rushed for the steaming hot coco and donuts Reg had brought to the side of the field - the winning team got first dibs on the jelly filling, so I made sure to grab a blueberry one for Alison.</p>
 
-<p>The puck's multi-lens circuitry was from her snowbot navigation design, which would prove esential here in the harsh winter ahead.  Behind us on the sea-ice stood the two tallest buildings on the continent -- the IceCube Lab where scientists searched for almost undetectable subatomic particles -- neutrinos.  (Several of those hardworking scientists happened to be our parents.)
+<p>The puck's multi-lens circuitry was from her snowbot navigation design, which would prove essential here in the harsh winter ahead.  Behind us on the sea-ice stood the two tallest buildings on the continent -- the IceCube Lab where scientists searched for almost undetectable subatomic particles -- neutrinos.  (Several of those hardworking scientists happened to be our parents.)
 </p>
 
 <!--
