--- a/gathering-cats/unwinding/index.html
+++ b/gathering-cats/unwinding/index.html
@@ -142,7 +142,7 @@
 	<h1>Unwinding Wonder Valley</h1>
 	
 	<p>
-		March 2021: I talked to my old roommate Patrick Rosenthal this evening. We took a screenwriting class at UCSB years ago, shortly after returning from a marathon roadtrip from California to New York and Massachusetts. More recently he'd been writing a story called Wonder Valley. It doesn't feel like he'll be taking it to completion. It fills notebooks and he hasn't working on it for a couple years. Before hearing it was in notebooks, I felt the following could act as a bridge between our writing. Perhaps I can work with him to introduce two of his characters, The Detective and Jumbo. He's a master of gritty noir, something I'm lacking.
+		March 2021: I talked to my old roommate Patrick Rosenthal this evening. We took a screenwriting class at UCSB years ago, shortly after returning from a marathon roadtrip from California to New York and Massachusetts. More recently he'd been writing a story called Wonder Valley. It doesn't feel like he'll be taking it to completion. It fills notebooks and he hasn't been working on it for a couple years. Before hearing it was in notebooks, I felt the following could act as a bridge between our writing. Perhaps I can work with him to introduce two of his characters, The Detective and Jumbo. He's a master of gritty noir, something I'm lacking.
 	</p>
 
 	<h3>Aurora Adrift - 1995</h3>
