--- a/edge-of-the-world.html
+++ b/edge-of-the-world.html
@@ -236,7 +236,7 @@ $(document).on('click', '#vidCover', function () {
 
 
 <div class="containerX">
-<div class="content">
+<div class="content contentpadding">
 
 <div style="float:right">
   <link type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
@@ -462,6 +462,9 @@ Within a year, the cooling technology we were developing took a profitable turn 
 
 <p>Continue: <a href="./the-artisan/" target="finibus">The Artisan</a></p>
 
+<div style="display:none" class="local">
+<a href="./scale.html" target="scale">Scale</a></p>
+</div>
 
 </div><!-- /audioscape -->
 
