--- a/footer.html
+++ b/footer.html
@@ -8,11 +8,16 @@
     <div class="pageColumn">
       <div class="pageColumnInside">
           <h2 style="text-transform: uppercase;font-size:18px">Linked stories</h2>
-           Collaborative repos, dynamic data.
+           Collaborative repos, dynamic data.<br>
 
+           <div style="display:none" class="local">
+            <a href="application/">Application</a>
+           </div>
           <!-- and free hosting on Github. 
           <a href="https://neighborhood.org/localsite/start/">Get Started</a>
           -->
+
+
       </div>
     </div>
 
