--- a/gathering-cats/aurora/index.html
+++ b/gathering-cats/aurora/index.html
@@ -102,7 +102,7 @@
 <a name="go"></a>
 <div id="floatContent" class="container floatContainerX" style="margin-top:100px">
 
-	<div class="content">
+	<div class="content contentpadding">
 
 		<div style="float:right">
 		  <link type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
@@ -150,7 +150,7 @@
 
 <div class="audioscape">
 <p>
-	One of the sad and confusing moments I had to face as a student preparing for my sophomore year, was the call I received from Aurora, whom I'd been dating at the end of my freshman year.  We'd both gone north for the summer, she to Sutton Valley to her parent's house and me to Coloma, Michigan to visit my Dad and Stepmum. Returning to my mom's in Upland, California, I'd be back in Santa Barbara in a couple weeks when my lease started at the Newman housing co-op on the edge of campus.
+	One of the sad and confusing moments faced as a student preparing for my sophomore year, was the call I received from Aurora, whom I'd been dating at the end of my freshman year.  We'd both gone north for the summer, she to Sutton Valley to her parent's house and me to Coloma, Michigan to visit my Dad and Stepmum. Returning to my mom's in Upland, California, I'd be back in Santa Barbara in a couple weeks when my lease started at the Newman housing co-op on the edge of campus.
 </p>
 <p>
 	I picked up the phone to hear a tearful Aurora.  "Mike told me you were planning to break up. I got drunk. Stanly had sex with me. I don't know what to do."  What a flood of emotions, being mad at Mike, pissed at Stanly, but mostly this tremendous need to console Aurora. What a fucked start for the new school year.
