--- a/gathering-cats/border-crossing/index.html
+++ b/gathering-cats/border-crossing/index.html
@@ -91,7 +91,7 @@
 
 <div id="menuHolder" class="menuHolderShort"></div>
 <div class="containerXXX">
-<div class="content">
+<div class="content contentpadding">
 
 
 <a href="../../" class="returnhome">Audioscape</a>
