--- a/gathering-cats/unwinding/index.html
+++ b/gathering-cats/unwinding/index.html
@@ -100,9 +100,9 @@
 
 
 <a name="go"></a>
-<div id="floatContent" class="container floatContainerX" style="margin-top:100px">
+<div id="floatContent" class="containerXD floatContainerXD">
 
-	<div class="content">
+	<div class="content contentpadding">
 
 		
 
@@ -188,7 +188,7 @@
 
 <hr>
 <p>
-	Sometimes when we write things down, it's a way to let them go. Other times it's a way to build a universe that grows and grows until the writer is living in a space fabricated from the loose pieces they've woven together from their life.
+	Sometimes when we write things down, it's a way to let them go. Other times it's a way to build a universe that grows and grows until the writer is living in a space fabricated from the loose pieces woven together from their life.
 </p>
 
 <!--
