--- a/index.html
+++ b/index.html
@@ -76,16 +76,30 @@
 
     <div class="lazy bgimg bgimg-notfixed" data-src="img/bkgd/water-night.jpg" style="opacity:.85; position:relative;">
         <img src="img/bkgd/water-night.jpg" style="opacity:0; width:100%">
+        
 
         <a name="location" style="position:absolute; left:0px; bottom:800px"></a>
     </div>
 
     <div class="storybox">
         <div style="displayX:none">
-            5,000 nautical miles north, on the leeward side of Alexandria, you'll find us on the basalt shoreline, network glistening, the sound of twilight surf. &nbsp;Near the once frozen arctic, we generate your most time sensitive world renderings. Remote, secluded, well connected and far removed from the confines of our lan-locked days. 
-            <!-- Lord Exodus 
-            AI Mentor Network for collaborative design.
+            5,000 nautical miles north of Antikythera, on the leeward side of Alexandria, you'll find us on the basalt shoreline, network glistening, the sound of twilight surf. &nbsp;Near the once frozen arctic, we generate your most time sensitive world renderings. Remote, secluded, well connected and far removed from the confines of our lan-locked days.<br>
+
+
+                
+            <a href="img/bkgd/antikythera-34.jpg.webp"><img src="img/bkgd/antikythera-34.jpg.webp" style="opacity:1; width:100%; max-width:200px; margin-top:20px"></a><br>
+
+            <!--
+            Love this device, the Antikythera Mechanism (created 205 BC) discovered by sponge divers in 1901 near the island of Antikythera. Amazing that the ancient Greeks could use it to predict eclipses and the 462-year planetary relation between Earth and Venus using a 62-tooth gear. Venus orbits the sun in 225 earth days.
+
+            https://www.ucl.ac.uk/news/2021/mar/experts-recreate-mechanical-cosmos-worlds-first-computer
+            https://madsystems.com/portfolio-item/antikythera/
+            https://spacecentre.co.uk/blog-post/the-antikythera-mechanism-2000-years-on/
+
+            <img src="img/bkgd/antikythera-guys.jpg" style="opacity:1; width:100%"><br>
             -->
+
+
         </div>
 
     </div>
@@ -137,6 +151,7 @@
             </div>
         </div>
     </div>
+
 
 </div>
 
