--- a/lucendia/codas-tribe/index.html
+++ b/lucendia/codas-tribe/index.html
@@ -12,7 +12,7 @@
 <img class="fixedBkgd" src="../../img/early/BorealForest.jpg" alt="" />
 
 <div class="container">
-<div class="content">
+<div class="content contentpadding">
 
 <a href="../../" class="returnhome">Audioscape</a>
 <h1>Cave on the Edge</h1>
