--- a/lucendia/lucendia-dreams/index.html
+++ b/lucendia/lucendia-dreams/index.html
@@ -13,7 +13,7 @@ font-family:lucida grande, tahoma, verdana, arial, sans-serif">
 <img class="fixedBkgd" src="/audioscape/img/fractals/BuddhabrotSection.jpg" style="min-width:450px;width:100%;" alt="" />
 
 <div class="container">
-<div class="content">
+<div class="content contentpadding">
 
 
 <a href="../../" class="returnhome">Audioscape</a>
