--- a/mix/mineral/index.html
+++ b/mix/mineral/index.html
@@ -36,7 +36,7 @@
 <img class="fixedBkgd" src="img/salt.jpg" alt="Salt" />
 
 <div class="container">
-<div class="content">
+<div class="content contentpadding">
     <h1>Salt</h1>
 
     <p>Salt is a mineral substance made of sodium chloride (NaCl), a chemical compound. </p>
