--- a/mix/spaceshooter/space_shooter.html
+++ b/mix/spaceshooter/space_shooter.html
@@ -117,7 +117,7 @@
 	</head>
 	<body>
 		<p class="header"><span>Unity Web Player | </span>Space Shooter</p>
-		<div class="content">
+		<div class="content contentpadding">
 			<div id="unityPlayer">
 				<div class="missing">
 					<a href="http://unity3d.com/webplayer/" title="Unity Web Player. Install now!">
