--- a/scale.html
+++ b/scale.html
@@ -33,9 +33,9 @@
 <div class="container" style="float:right">
 
 <!--
-<div class="content">
+<div class="content contentpadding">
 
-<h3><a href="summer/03-The-Inner-Inlet/" style="text-decoration: none; color:#DCDCDC">Awaiting your expectations</a></h3>
+<h3><a href="the-inner-inlet/" style="text-decoration: none; color:#DCDCDC">Awaiting your expectations</a></h3>
 
 </div>
 -->
@@ -198,7 +198,7 @@ The title combines Endgame, with Enclave, with cave, with the notion of cutting 
 
 <div id="footer">
 	<div style="float:right">
-		<a href="summer/03-The-Inner-Inlet/"><img src="img/icons/arrow-right.png" style="height:32px; margin-top:20px"></a>
+		<a href="the-inner-inlet/"><img src="img/icons/arrow-right.png" style="height:32px; margin-top:20px"></a>
 	</div>
 
 	<ul class="footer">
