--- a/spring/floating-island/index.html
+++ b/spring/floating-island/index.html
@@ -32,7 +32,7 @@
 <body>
 <div id="menuHolder"></div>
 <div class="container">
-<div class="content">
+<div class="content contentpadding">
 
 <p>Our group started small, focusing on using recycled plastic to purify water.</p>
 
