--- a/spring/index-journal.html
+++ b/spring/index-journal.html
@@ -14,7 +14,7 @@
 <body lang=EN-US link=blue vlink=purple>
 
 <div class="container">
-<div class="content">
+<div class="content contentpadding">
 
 <p><span style='font-family:"Calibri","sans-serif"'>2/9/2010</span></p>
 
