--- a/summer/codas-tribe/index.html
+++ b/summer/codas-tribe/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="container">
-<div class="content">
+<div class="content contentpadding">
 
 <h2><a href="../../books/1-Summer-Breeze">Summer Breeze</a></h2>
 <h1>Cave on the Forest's Edge</h1>
