--- a/summer/the-throwing-stone/index.html
+++ b/summer/the-throwing-stone/index.html
@@ -57,7 +57,7 @@
 <img class="fixedBkgd" src="/audioscape/img/bkgd/catchsail-wheel.jpg" style="min-width:450px;" alt="" />
 
 <div class="container floatContainer">
-<div class="content">
+<div class="content contentpadding">
 
 
 
