--- a/sun/from-a-hill/index.html
+++ b/sun/from-a-hill/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="container">
-<div class="content">
+<div class="content contentpadding">
 <h1>From a Hill<br>
 </h1>
 <p>This is the version sent to Kim. A more recent version might be elsewhere.</p>
