--- a/sun/on-the-run/index.html
+++ b/sun/on-the-run/index.html
@@ -14,7 +14,7 @@
 <div id="menuHolder"></div>
 
 <div class="container">
-<div class="content">
+<div class="content contentpadding">
 
 <a href="../../" class="returnhome">Audioscape</a>
 <h1>On the Run</h1>
@@ -152,7 +152,7 @@ Many birds and insects have their own compass thanks to magnetically sensitive m
 After the storm, we followed the two birds as they started a new route toward the coast, covering almost 32 kilometers in two days. About how many miles is that? My brain was too chilled to think. In the dim morning light of our fifth day on the ice, we could make out the edge of a human-made structure on the horizon ahead.
 </p>
 
-Continue: <a href="../../">Look what we stumbled upon next!</a>
+Continue: <a href="../../edge-of-the-world.html">Look what we stumbled upon next!</a>
 
 <ul class="footer">
     <li><a href="/audioscape/">&copy; 2021 Audioscape</a><br><br></li>
