--- a/the-inner-inlet/index.html
+++ b/the-inner-inlet/index.html
@@ -21,7 +21,7 @@
 style="min-width:450px;width:100%;max-width:2000px;" alt="" />
 
 <div class="container">
-<div class="content">
+<div class="content contentpadding">
 
 <a href="../" class="returnhome">Audioscape</a>
 
