--- a/winter/faraway-eyes/index.html
+++ b/winter/faraway-eyes/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="container">
-        <div class="content">
+        <div class="content contentpadding">
 
 <p><a href="../">Audioscape</a> - Diamond Storms - Chapter 1</p>
 <h1>Faraway Eyes</h1>
