--- a/blender/index.html
+++ b/blender/index.html
@@ -8,7 +8,7 @@
 <img class="fixedBkgd" src="../img/universe/milkyway-atlantic.jpg" alt="" />
 
 <div class="container" style="max-width:700px">
-<div class="content">
+<div class="content contentpadding">
 
 
 <a href="../" class="returnhome">Audioscape</a>
