--- a/cat-star/index.html
+++ b/cat-star/index.html
@@ -23,7 +23,7 @@
 -->
 
 <div class="container">
-<div class="content">
+<div class="content contentpadding">
 
 <a href="../" class="returnhome">Audioscape</a>
 
@@ -144,7 +144,7 @@ http://www.youtube.com/watch?feature=endscreen&amp;v=WvNEVvHgOOY&amp;NR=1  </p>
 <!-- image could reside here -->
 
 
-<div class="content">
+<div class="content contentpadding">
 <h1>From an Artic Dream</h1>
 <!-- Feb 2, 2017 -->
 
