--- a/mix/game/index.html
+++ b/mix/game/index.html
@@ -39,7 +39,7 @@
 
   <div onclick="$('.container').hide();return false;" style="float:right; margin-top:5px; margin-right:5px; border:1px solid #fff;height:12px;width:12px;font-size:10px; line-height:12px;text-align:center; cursor: pointer;">X</div>
 
-<div class="content">
+<div class="content contentpadding">
     
 
     <h1>Welcome to <span style="white-space:nowrap">The Vortex</span></h1>
