--- a/mix/island/index.html
+++ b/mix/island/index.html
@@ -37,7 +37,7 @@
 </div>
 
 <div class="container">
-<div class="content">
+<div class="content contentpadding">
     <h1>Floating Island</h1>
 
     <p></p>
