--- a/mix/location/index.html
+++ b/mix/location/index.html
@@ -31,7 +31,7 @@
   <img src="img/isola.jpg" style="position:fixed;z-index:-1;width:100%" alt="" />
 <div id="menuHolder"></div>
 <div class="container">
-<div class="content">
+<div class="content contentpadding">
     <h1>Harvest the Vortex</h1>
 
     <p style="background:#252A61;color:#fff">#stopthevortex</p> 
