--- a/mix/spaceshooter/index.html
+++ b/mix/spaceshooter/index.html
@@ -117,7 +117,7 @@
 		</style>
 	</head>
 	<body>
-		<div class="content">
+		<div class="content contentpadding">
 			<div id="unityPlayer">
 				<div class="missing">
 					<a href="http://unity3d.com/webplayer/" title="Unity Web Player. Install now!">
