--- a/spring/finibus-tour/index.html
+++ b/spring/finibus-tour/index.html
@@ -103,7 +103,7 @@
 <div id="floatContent" class="container floatContainerX" style="margin-top:100px">
 	
 
-	<div class="content">
+	<div class="content contentpadding">
 
 		<!--a href="../../" class="returnhome">TeVeS 1.5</a-->
 		<a href="../../gathering-cats/unwinding/" class="returnhome">Tar and Steel</a>
