--- a/spring/house.html
+++ b/spring/house.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="container">
-<div class="content">
+<div class="content contentpadding">
 <h1>Dark Structure<br>
 </h1>
 
