--- a/spring/twist/index.html
+++ b/spring/twist/index.html
@@ -70,7 +70,7 @@
 <a name="go"></a>
 <div class="container floatContainerX" style="margin-top:100px">
 
-	<div class="content">
+	<div class="content contentpadding">
 
 		
 		<div style="float:right">
