--- a/summer/index-old.html
+++ b/summer/index-old.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="container">
-        <div class="content">
+        <div class="content contentpadding">
 			<h1>Captcha, You're It!</h1>
 			By David Ipsum<br>
 		  <br><br>
