--- a/summer/semantic-space/index.html
+++ b/summer/semantic-space/index.html
@@ -23,7 +23,7 @@
 -->
 
 <div class="container">
-<div class="content">
+<div class="content contentpadding">
 
 <a href="../../" class="returnhome">Audioscape</a>
 
