--- a/summer/who-was-wu/index.html
+++ b/summer/who-was-wu/index.html
@@ -15,7 +15,7 @@
 <img class="fixedBkgd" src="/audioscape/summer/img/starry/aurora-cabin.jpg" alt="" />
 
 <div class="container">
-<div class="content">
+<div class="content contentpadding">
 
 <!--
 <div class="musicEmbed">
