--- a/the-artisan/index.html
+++ b/the-artisan/index.html
@@ -6,24 +6,9 @@
 
   <link rel="stylesheet" type="text/css" href="../css/all.css">
   <title>The Artisan</title>
-
+  <meta name="robots" content="noindex,nofollow" />
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="../../css/all.css" />
-  <link rel="stylesheet" type="text/css" href="http://localhost:8887/audioscape/css/local.css">
-
-  <link type="text/css" rel="stylesheet" href="https://neighborhood.org/localsite/css/base.css" />
-  <script type="text/javascript" src="https://neighborhood.org/localsite/js/d3.v5.min.js"></script>
-  <script type="text/javascript" src="https://neighborhood.org/localsite/js/jquery.min.js"></script>
-  <script type="text/javascript" src="https://neighborhood.org/localsite/js/localsite.js"></script>
-  <script type="text/javascript" src="https://neighborhood.org/localsite/js/showdown.min.js"></script>
-  <script type="text/javascript" src="https://neighborhood.org/localsite/js/navigation.js"></script>
-
-  <link type="text/css" rel="stylesheet" href="https://neighborhood.org/localsite/css/bootstrap.darkly.min.css">
-  <script type="text/javascript" src="/audioscape/js/common/common.js"></script>
-  <link type="text/css" rel="stylesheet" href="/audioscape/css/all.css">
-
-
-  <meta name="robots" content="noindex,nofollow" />
 
   <link type="text/css" rel="stylesheet" href="https://neighborhood.org/localsite/css/base.css" />
   <script type="text/javascript" src="https://neighborhood.org/localsite/js/d3.v5.min.js"></script>
@@ -35,8 +20,6 @@
   <link type="text/css" rel="stylesheet" href="https://neighborhood.org/localsite/css/bootstrap.darkly.min.css">
   -->
   <script type="text/javascript" src="/audioscape/js/common/common.js"></script>
-  <link type="text/css" rel="stylesheet" href="../../css/all.css">
-
   <script>
       param.titleArray = ["audio","scape"]
       param.headerLogo = "🎧 "; // headphones
@@ -100,7 +83,7 @@
 <img class="fixedBkgdX" src="../summer/img/starry/starry-night-tribute.jpg" alt="" />
 
 <div id="location" class="container">
-<div class="content">
+<div class="content contentpadding">
 
 <!--
 <div class="musicEmbed">
@@ -199,7 +182,7 @@ stack of photos bound in a tattered piece of cloth.</p>
 life.&#8221;
 -->
 </p>
-<p><a href="../gathering-cats/border-crossing/">Border Crossing</a></p>
+<p>Continue: <a href="../gathering-cats/border-crossing/">Border Crossing</a></p>
 <a href="/audioscape/">&copy; 2021 Audioscape</a><br><br>
 </div>
 </div>
