--- a/the-inner-inlet-process/index.html
+++ b/the-inner-inlet-process/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="container">
-        <div class="content">
+        <div class="content contentpadding">
 
 		
 <h1>Chapter 2 - The Inner Inlet</h1>
