--- a/winter/challenge/index.html
+++ b/winter/challenge/index.html
@@ -21,7 +21,7 @@
 <div id="menuHolder"></div>
 
 <div class="container">
-<div class="content">
+<div class="content contentpadding">
 
 
 <a href="../../" class="returnhome">Audioscape</a>
