--- a/winter/diamond-sky/index.html
+++ b/winter/diamond-sky/index.html
@@ -80,7 +80,7 @@
 
 <div id="menuHolder"></div>
 <div class="container">
-<div class="content">
+<div class="content contentpadding">
         
     <!--
     For Fall:
