--- a/winter/fueled-by-combustion/index.html
+++ b/winter/fueled-by-combustion/index.html
@@ -22,7 +22,7 @@
 <img class="fixedBkgd" src="/audioscape/img/fractals/BuddhabrotSection.jpg" style="min-width:450px;width:100%;" alt="" />
 
 <div class="container">
-<div class="content">
+<div class="content contentpadding">
 
 <a href="../../" class="returnhome">Audioscape</a>
 
