--- a/winter/lancroft/index.html
+++ b/winter/lancroft/index.html
@@ -1,15 +1,43 @@
 <!DOCTYPE>
-<html>
-<head>
-    <title>Lancroft</title>
-    <meta name="robots" content="noindex,nofollow" />
 
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="Content-Type" content="text/html;">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Lancroft - Audioscape</title>
+<!--link rel="shortcut icon" href="../img/icons/" /-->
+<style type='text/css'>
+	.clear { border-top: solid 1px #ccc;}
+</style>
+
+
+<meta name="robots" content="noindex,nofollow" />
+
+<link type="text/css" rel="stylesheet" href="https://neighborhood.org/localsite/css/base.css" />
+<script type="text/javascript" src="https://neighborhood.org/localsite/js/d3.v5.min.js"></script>
+<script type="text/javascript" src="https://neighborhood.org/localsite/js/jquery.min.js"></script>
+<script type="text/javascript" src="https://neighborhood.org/localsite/js/localsite.js"></script>
+<script type="text/javascript" src="https://neighborhood.org/localsite/js/showdown.min.js"></script>
+<script type="text/javascript" src="https://neighborhood.org/localsite/js/navigation.js"></script>
+<!--
+<link type="text/css" rel="stylesheet" href="https://neighborhood.org/localsite/css/bootstrap.darkly.min.css">
+-->
+<script type="text/javascript" src="/audioscape/js/common/common.js"></script>
+<link type="text/css" rel="stylesheet" href="../../css/all.css">
+
+<script>
+    param.titleArray = ["audio","scape"]
+    param.headerLogo = "🎧 "; // headphones
+    param.startTitle = "AudioScape"
+	param.headerLogoX = "<img src='img/logo/[].png' style='width:28px'>";
+    param.headerFileX = "../../header.html"
+    param.footer = "../../footer.html"
+    $(window).scroll(function(){let toZero = 1-$(window).scrollTop()/200; $(".herocenter").css("opacity", toZero); if (toZero <= 0) {$(".herocenter").hide()} else {$(".herocenter").show();}});
+</script>
 
     
     <!-- menu load -->
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
-	<script type="text/javascript">window.jQuery || document.write(unescape('%3Cscript src="/audioscape/js/jquery.min.js" type="text/javascript"%3E%3C/script%3E'))</script>
 	<script type="text/javascript">
 	  function loadjscssfile(filename){
 	      var fileref=document.createElement('script')
@@ -33,7 +61,7 @@
 <body>
 <div id="menuHolder"></div>
 <div class="container">
-<div class="content">
+<div class="content contentpadding">
 
 
 <img src="../../img/stone/memorystone.jpg"><br><br>
