--- a/winter/the-bridge/index.html
+++ b/winter/the-bridge/index.html
@@ -15,7 +15,7 @@
 
 <img class="fixedBkgd" src="../../img/bridge/bridge-bw.jpg" alt="" />
 <div class="container">
-<div class="content">
+<div class="content contentpadding">
 
 <a href="../../" class="returnhome">Audioscape</a>
 <h1 class="mainTitle">The Bridge</h1>
